--- a/Crew/crew.html
+++ b/Crew/crew.html
@@ -32,7 +32,7 @@
         <div class="col-md-4 crew-photo-div d-flex justify-content-center">
           <a class="person" href="crew-info.html#01" class="crew-photo">
             <div class="headshot-container">
-                <img class="headshot" class="img-responsive" src="images/mag/bhavana.jpeg" alt="Bhavana">
+                <img class="headshot" class="img-responsive" src="images/mag/bhavana.jpg" alt="Bhavana">
             </div>
             <div class="name">Bhavana</div>
             <div class="job-title">Editor-In-Chief</div>
@@ -44,7 +44,7 @@
         <div class="col-md-4 crew-photo-div d-flex justify-content-center">
           <a class="person" href="crew-info.html#02" class="crew-photo">
             <div class="headshot-container">
-                <img class="headshot" class="img-responsive" src="images/mag/sharvari.jpeg" alt="Sharvari">
+                <img class="headshot" class="img-responsive" src="images/mag/sharvari.jpg" alt="Sharvari">
             </div>
             <div class="name">Sharvari</div>
             <div class="job-title">Editor-In-Chief</div>
@@ -56,7 +56,7 @@
         <div class="col-md-4 crew-photo-div d-flex justify-content-center">
           <a class="person" href="crew-info.html#03" class="crew-photo">
             <div class="headshot-container">
-                <img class="headshot" class="img-responsive" src="images/mag/santosh.jpeg" alt="Santosh">
+                <img class="headshot" class="img-responsive" src="images/mag/santosh.jpg" alt="Santosh">
             </div>
             <div class="name">Santosh</div>
             <div class="job-title">Editor-In-Chief</div>
@@ -71,7 +71,7 @@
         <div class="col-md-4 crew-photo-div d-flex justify-content-center ">
           <a class="person" href="crew-info.html#04" class="crew-photo">
             <div class="headshot-container">
-                <img class="headshot" class="img-responsive" src="images/mag/adi.jpeg" alt="Adi">
+                <img class="headshot" class="img-responsive" src="images/mag/adi.jpg" alt="Adi">
             </div>
             <div class="name">Adi</div>
             <div class="job-title">Editor - Kannada</div>
@@ -83,7 +83,7 @@
         <div class="col-md-4 crew-photo-div d-flex justify-content-center ">
           <a class="person" href="crew-info.html#05" class="crew-photo">
             <div class="headshot-container">
-                <img class="headshot" class="img-responsive" src="images/mag/prarthana.jpeg" alt="Prarthana">
+                <img class="headshot" class="img-responsive" src="images/mag/prarthana.jpg" alt="Prarthana">
             </div>
             <div class="name">Prarthana</div>
             <div class="job-title">Editor - Kannada</div>
@@ -95,7 +95,7 @@
         <div class="col-md-4 crew-photo-div d-flex justify-content-center ">
           <a class="person" href="crew-info.html#06" class="crew-photo">
             <div class="headshot-container">
-                <img class="headshot" class="img-responsive" src="images/mag/royina.jpeg" alt="Royina">
+                <img class="headshot" class="img-responsive" src="images/mag/royina.jpg" alt="Royina">
             </div>
             <div class="name">Royina</div>
             <div class="job-title">Editor - English</div>
@@ -109,7 +109,7 @@
         <div class="col-md-4 crew-photo-div d-flex justify-content-center ">
           <a class="person" href="crew-info.html#07" class="crew-photo">
             <div class="headshot-container">
-                <img class="headshot" class="img-responsive" src="images/mag/shashank.jpeg" alt="Shashank">
+                <img class="headshot" class="img-responsive" src="images/mag/shashank.jpg" alt="Shashank">
             </div>
             <div class="name">Shashank</div>
             <div class="job-title">Editor - Art</div>
@@ -121,7 +121,7 @@
         <div class="col-md-4 crew-photo-div d-flex justify-content-center ">
           <a class="person" href="crew-info.html#08" class="crew-photo">
             <div class="headshot-container">
-                <img class="headshot" class="img-responsive" src="images/mag/shreya.jpeg" alt="Shreya">
+                <img class="headshot" class="img-responsive" src="images/mag/shreya.jpg" alt="Shreya">
             </div>
             <div class="name">Shreya</div>
             <div class="job-title">Editor - English</div>
@@ -133,7 +133,7 @@
         <div class="col-md-4 crew-photo-div d-flex justify-content-center ">
           <a class="person" href="crew-info.html#09" class="crew-photo">
             <div class="headshot-container">
-                <img class="headshot" class="img-responsive" src="images/mag/sumi.jpeg" alt="Sumi">
+                <img class="headshot" class="img-responsive" src="images/mag/sumi.jpg" alt="Sumi">
             </div>
             <div class="name">Sumi</div>
             <div class="job-title">Editor - English</div>
@@ -147,7 +147,7 @@
         <div class="col-md-4 crew-photo-div d-flex justify-content-center ">
           <a class="person" href="crew-info.html#10" class="crew-photo">
             <div class="headshot-container">
-                <img class="headshot" class="img-responsive" src="images/mag/viva.jpeg" alt="Viva">
+                <img class="headshot" class="img-responsive" src="images/mag/viva.jpg" alt="Viva">
             </div>
             <div class="name">Vinay</div>
             <div class="job-title">Editor - Kannada</div>
@@ -159,7 +159,7 @@
         <div class="col-md-4 crew-photo-div d-flex justify-content-center ">
           <a class="person" href="crew-info.html#11" class="crew-photo">
             <div class="headshot-container">
-                <img class="headshot" class="img-responsive" src="images/mag/anagha.jpeg" alt="Anagha">
+                <img class="headshot" class="img-responsive" src="images/mag/anagha.jpg" alt="Anagha">
             </div>
             <div class="name">Anagha</div>
             <div class="job-title">Editor - English</div>
@@ -172,7 +172,7 @@
         <div class="col-md-4 crew-photo-div d-flex justify-content-center ">
           <a class="person" href="crew-info.html#12" class="crew-photo">
             <div class="headshot-container">
-                <img class="headshot" class="img-responsive" src="images/mag/rajath.jpeg" alt="Rajath">
+                <img class="headshot" class="img-responsive" src="images/mag/rajath.jpg" alt="Rajath">
             </div>
             <div class="name">Rajath</div>
             <div class="job-title">Editor - Art</div>
@@ -186,7 +186,7 @@
         <div class="col-md-4 crew-photo-div d-flex justify-content-center ">
           <a class="person" href="crew-info.html#13" class="crew-photo">
             <div class="headshot-container">
-                <img class="headshot" class="img-responsive" src="images/mag/vijeth.jpeg" alt="Vijeth">
+                <img class="headshot" class="img-responsive" src="images/mag/vijeth.jpg" alt="Vijeth">
             </div>
             <div class="name">Vijeth</div>
             <div class="job-title">Editor - Kannada</div>
@@ -198,7 +198,7 @@
         <div class="col-md-4 crew-photo-div d-flex justify-content-center ">
           <a class="person" href="crew-info.html#14" class="crew-photo">
             <div class="headshot-container">
-                <img class="headshot" class="img-responsive" src="images/mag/harsha.jpeg" alt="Harsha">
+                <img class="headshot" class="img-responsive" src="images/mag/harsha.jpg" alt="Harsha">
             </div>
             <div class="name">Harsha</div>
             <div class="job-title">Editor - Kannada</div>
@@ -210,7 +210,7 @@
         <div class="col-md-4 crew-photo-div d-flex justify-content-center ">
           <a class="person" href="crew-info.html#15" class="crew-photo">
             <div class="headshot-container">
-                <img class="headshot" class="img-responsive" src="images/mag/meghana.jpeg" alt="Meghana">
+                <img class="headshot" class="img-responsive" src="images/mag/meghana.jpg" alt="Meghana">
             </div>
             <div class="name">Meghana</div>
             <div class="job-title">Editor - Kannada</div>
@@ -224,7 +224,7 @@
         <div class="col-md-4 crew-photo-div d-flex justify-content-center ">
           <a class="person" href="crew-info.html#16" class="crew-photo">
             <div class="headshot-container">
-                <img class="headshot" class="img-responsive" src="images/mag/poorvi.jpeg" alt="Poorvi">
+                <img class="headshot" class="img-responsive" src="images/mag/poorvi.jpg" alt="Poorvi">
             </div>
             <div class="name">Poorvi</div>
             <div class="job-title">Editor - English</div>
@@ -236,7 +236,7 @@
         <div class="col-md-4 crew-photo-div d-flex justify-content-center ">
           <a class="person" href="crew-info.html#17" class="crew-photo">
             <div class="headshot-container">
-                <img class="headshot" class="img-responsive" src="images/mag/sanchita.jpeg" alt="Sanchita">
+                <img class="headshot" class="img-responsive" src="images/mag/sanchita.jpg" alt="Sanchita">
             </div>
             <div class="name">Sanchita</div>
             <div class="job-title">Editor - Kannada</div>
@@ -248,7 +248,7 @@
         <div class="col-md-4 crew-photo-div d-flex justify-content-center ">
           <a class="person" href="crew-info.html#17" class="crew-photo">
             <div class="headshot-container">
-                <img class="headshot" class="img-responsive" src="images/mag/surabhi.jpeg" alt="Surabhi">
+                <img class="headshot" class="img-responsive" src="images/mag/surabhi.jpg" alt="Surabhi">
             </div>
             <div class="name">Surabhi</div>
             <div class="job-title">Editor - English</div>
