--- a/Crew/crew-info.html
+++ b/Crew/crew-info.html
@@ -16,7 +16,7 @@
   </head>
   <div class="container-fluid pt-2">
     <div class="d-flex justify-content-center"><img src="images/crew-header.jpg" class="crew-head-img1 img-responsive" alt=""></div>
-    <div class="d-flex justify-content-center"><img src="images/thumbnails/bhavana.jpg" class="crew-head-img2 img-responsive" alt=""></div>
+    <div class="d-flex justify-content-center"><img src="images/thumbnails/bhavana.JPG" class="crew-head-img2 img-responsive" alt=""></div>
   <div>
   <div class="container mb-5 pt-0">
     <div class="row crew-head py-3">
@@ -101,7 +101,7 @@
     	<div class="splide__track">
     		<ul class="splide__list">
     			<li class="splide__slide" data-splide-hash="01">
-            <a href="crew-info.html#01"><img class="headshot" src="images/thumbnails/bhavana.jpg" alt="Bhavana"></a>
+            <a href="crew-info.html#01"><img class="headshot" src="images/thumbnails/bhavana.JPG" alt="Bhavana"></a>
           </li>
     			<li class="splide__slide" data-splide-hash="02">
             <a href="crew-info.html#02"><img class="headshot" src="images/thumbnails/sharvari.jpg" alt="Sharvari"></a>
