--- a/Crew/crew-info.html
+++ b/Crew/crew-info.html
@@ -104,55 +104,55 @@
             <a href="crew-info.html#01"><img class="headshot" src="images/thumbnails/bhavana.JPG" alt="Bhavana"></a>
           </li>
     			<li class="splide__slide" data-splide-hash="02">
-            <a href="crew-info.html#02"><img class="headshot" src="images/thumbnails/sharvari.jpg" alt="Sharvari"></a>
+            <a href="crew-info.html#02"><img class="headshot" src="images/thumbnails/sharvari.JPG" alt="Sharvari"></a>
           </li>
     			<li class="splide__slide" data-splide-hash="03">
-            <a href="crew-info.html#03"><img class="headshot" src="images/thumbnails/santosh.jpg" alt="Santosh"></a>
+            <a href="crew-info.html#03"><img class="headshot" src="images/thumbnails/santosh.JPG" alt="Santosh"></a>
           </li>
           <li class="splide__slide" data-splide-hash="04">
-            <a href="crew-info.html#04"><img class="headshot" src="images/thumbnails/adi.jpg" alt="Adi"></a>
+            <a href="crew-info.html#04"><img class="headshot" src="images/thumbnails/adi.JPG" alt="Adi"></a>
           </li>
     			<li class="splide__slide" data-splide-hash="05">
-            <a href="crew-info.html#05"><img class="headshot" src="images/thumbnails/prarthana.jpg" alt="Prathana"></a>
+            <a href="crew-info.html#05"><img class="headshot" src="images/thumbnails/prarthana.JPG" alt="Prathana"></a>
           </li>
           <li class="splide__slide" data-splide-hash="06">
-            <a href="crew-info.html#06"><img class="headshot" src="images/thumbnails/royina.jpg" alt="Royina"></a>
+            <a href="crew-info.html#06"><img class="headshot" src="images/thumbnails/royina.JPG" alt="Royina"></a>
           </li>
     			<li class="splide__slide" data-splide-hash="07">
-            <a href="crew-info.html#07"><img class="headshot" src="images/thumbnails/shashank.jpg" alt="Shashank"></a>
+            <a href="crew-info.html#07"><img class="headshot" src="images/thumbnails/shashank.JPG" alt="Shashank"></a>
           </li>
     			<li class="splide__slide" data-splide-hash="08">
-            <a href="crew-info.html#08"><img class="headshot" src="images/thumbnails/shreya.jpg" alt="Shreya"></a>
+            <a href="crew-info.html#08"><img class="headshot" src="images/thumbnails/shreya.JPG" alt="Shreya"></a>
           </li>
           <li class="splide__slide" data-splide-hash="09">
-            <a href="crew-info.html#09"><img class="headshot" src="images/thumbnails/sumi.jpg" alt="Sumi"></a>
+            <a href="crew-info.html#09"><img class="headshot" src="images/thumbnails/sumi.JPG" alt="Sumi"></a>
           </li>
     			<li class="splide__slide" data-splide-hash="10">
-            <a href="crew-info.html#10"><img class="headshot" src="images/thumbnails/viva.jpg" alt="Viva"></a>
+            <a href="crew-info.html#10"><img class="headshot" src="images/thumbnails/viva.JPG" alt="Viva"></a>
           </li>
     			<li class="splide__slide" data-splide-hash="11">
-            <a href="crew-info.html#11"><img class="headshot" src="images/thumbnails/anagha.jpg" alt="Anagha"></a>
+            <a href="crew-info.html#11"><img class="headshot" src="images/thumbnails/anagha.JPG" alt="Anagha"></a>
           </li>
           <li class="splide__slide" data-splide-hash="12">
-            <a href="crew-info.html#12"><img class="headshot" src="images/thumbnails/rajath.jpg" alt="Rajath"></a>
+            <a href="crew-info.html#12"><img class="headshot" src="images/thumbnails/rajath.JPG" alt="Rajath"></a>
           </li>
           <li class="splide__slide" data-splide-hash="13">
-            <a href="crew-info.html#13"><img class="headshot" src="images/thumbnails/vijeth.jpg" alt="Vijeth"></a>
+            <a href="crew-info.html#13"><img class="headshot" src="images/thumbnails/vijeth.JPG" alt="Vijeth"></a>
           </li>
           <li class="splide__slide" data-splide-hash="14">
-            <a href="crew-info.html#13"><img class="headshot" src="images/thumbnails/harsha.jpg" alt="Harsha"></a>
+            <a href="crew-info.html#13"><img class="headshot" src="images/thumbnails/harsha.JPG" alt="Harsha"></a>
           </li>
           <li class="splide__slide" data-splide-hash="15">
-            <a href="crew-info.html#11"><img class="headshot" src="images/thumbnails/meghana.jpg" alt="Meghana"></a>
+            <a href="crew-info.html#11"><img class="headshot" src="images/thumbnails/meghana.JPG" alt="Meghana"></a>
           </li>
           <li class="splide__slide" data-splide-hash="16">
-            <a href="crew-info.html#12"><img class="headshot" src="images/thumbnails/poorvi.jpg" alt="Poorvi"></a>
+            <a href="crew-info.html#12"><img class="headshot" src="images/thumbnails/poorvi.JPG" alt="Poorvi"></a>
           </li>
           <li class="splide__slide" data-splide-hash="17">
-            <a href="crew-info.html#13"><img class="headshot" src="images/thumbnails/sanchita.jpg" alt="Sanchita"></a>
+            <a href="crew-info.html#13"><img class="headshot" src="images/thumbnails/sanchita.JPG" alt="Sanchita"></a>
           </li>
           <li class="splide__slide" data-splide-hash="18">
-            <a href="crew-info.html#13"><img class="headshot" src="images/thumbnails/surabhi.jpg" alt="Surabhi"></a>
+            <a href="crew-info.html#13"><img class="headshot" src="images/thumbnails/surabhi.JPG" alt="Surabhi"></a>
           </li>
     		</ul>
     	</div>
