--- a/Crew/crew.html
+++ b/Crew/crew.html
@@ -29,12 +29,14 @@
     <!--Picture Container-->
     <div class="container crew pb-5">
       <div class="row my-3">
+
+
         <div class="col-md-4 crew-photo-div d-flex justify-content-center">
           <a class="person" href="crew-info.html#01" class="crew-photo">
             <div class="headshot-container">
-                <img class="headshot" class="img-responsive" src="images/mag/bhavana.jpeg" alt="Bhavana">
+                <img class="headshot" class="img-responsive" src="images/mag/santosh.jpeg" alt="Santosh">
             </div>
-            <div class="name">Bhavana</div>
+            <div class="name">Santosh</div>
             <div class="job-title">Editor-In-Chief</div>
             <div class="theme-title">Theme Title/Tagline</div>
             <div>&nbsp;</div>
@@ -47,23 +49,25 @@
                 <img class="headshot" class="img-responsive" src="images/mag/sharvari.jpeg" alt="Sharvari">
             </div>
             <div class="name">Sharvari</div>
+            <div class="job-title">Art Chief</div>
+            <div class="theme-title">Theme Title/Tagline</div>
+            <div>&nbsp;</div>
+          </a>
+        </div>
+
+
+        <div class="col-md-4 crew-photo-div d-flex justify-content-center">
+          <a class="person" href="crew-info.html#03" class="crew-photo">
+            <div class="headshot-container">
+                <img class="headshot" class="img-responsive" src="images/mag/bhavana.jpeg" alt="Bhavana">
+            </div>
+            <div class="name">Bhavana</div>
             <div class="job-title">Editor-In-Chief</div>
             <div class="theme-title">Theme Title/Tagline</div>
             <div>&nbsp;</div>
           </a>
         </div>
 
-        <div class="col-md-4 crew-photo-div d-flex justify-content-center">
-          <a class="person" href="crew-info.html#03" class="crew-photo">
-            <div class="headshot-container">
-                <img class="headshot" class="img-responsive" src="images/mag/santosh.jpeg" alt="Santosh">
-            </div>
-            <div class="name">Santosh</div>
-            <div class="job-title">Editor-In-Chief</div>
-            <div class="theme-title">Theme Title/Tagline</div>
-            <div>&nbsp;</div>
-          </a>
-        </div>
 
       </div>
 
@@ -121,9 +125,9 @@
         <div class="col-md-4 crew-photo-div d-flex justify-content-center ">
           <a class="person" href="crew-info.html#08" class="crew-photo">
             <div class="headshot-container">
-                <img class="headshot" class="img-responsive" src="images/mag/shreya.jpeg" alt="Shreya">
+                <img class="headshot" class="img-responsive" src="images/mag/sumi.jpeg" alt="Sumi">
             </div>
-            <div class="name">Shreya</div>
+            <div class="name">Sumi</div>
             <div class="job-title">Editor - English</div>
             <div class="theme-title">Theme Title/Tagline</div>
             <div>&nbsp;</div>
@@ -133,20 +137,6 @@
         <div class="col-md-4 crew-photo-div d-flex justify-content-center ">
           <a class="person" href="crew-info.html#09" class="crew-photo">
             <div class="headshot-container">
-                <img class="headshot" class="img-responsive" src="images/mag/sumi.jpeg" alt="Sumi">
-            </div>
-            <div class="name">Sumi</div>
-            <div class="job-title">Editor - English</div>
-            <div class="theme-title">Theme Title/Tagline</div>
-            <div>&nbsp;</div>
-          </a>
-        </div>
-      </div>
-
-      <div class="row py-1">
-        <div class="col-md-4 crew-photo-div d-flex justify-content-center ">
-          <a class="person" href="crew-info.html#10" class="crew-photo">
-            <div class="headshot-container">
                 <img class="headshot" class="img-responsive" src="images/mag/viva.jpeg" alt="Viva">
             </div>
             <div class="name">Vinay</div>
@@ -155,9 +145,12 @@
             <div>&nbsp;</div>
           </a>
         </div>
+      </div>
 
-        <div class="col-md-4 crew-photo-div d-flex justify-content-center ">
-          <a class="person" href="crew-info.html#11" class="crew-photo">
+      <div class="row py-1">
+
+      <div class="col-md-4 crew-photo-div d-flex justify-content-center ">
+          <a class="person" href="crew-info.html#10" class="crew-photo">
             <div class="headshot-container">
                 <img class="headshot" class="img-responsive" src="images/mag/anagha.jpeg" alt="Anagha">
             </div>
@@ -168,23 +161,8 @@
           </a>
         </div>
 
-
         <div class="col-md-4 crew-photo-div d-flex justify-content-center ">
-          <a class="person" href="crew-info.html#12" class="crew-photo">
-            <div class="headshot-container">
-                <img class="headshot" class="img-responsive" src="images/mag/rajath.jpeg" alt="Rajath">
-            </div>
-            <div class="name">Rajath</div>
-            <div class="job-title">Editor - Art</div>
-            <div class="theme-title">Theme Title/Tagline</div>
-            <div>&nbsp;</div>
-          </a>
-        </div>
-      </div>
-
-      <div class="row py-1">
-        <div class="col-md-4 crew-photo-div d-flex justify-content-center ">
-          <a class="person" href="crew-info.html#13" class="crew-photo">
+          <a class="person" href="crew-info.html#11" class="crew-photo">
             <div class="headshot-container">
                 <img class="headshot" class="img-responsive" src="images/mag/vijeth.jpeg" alt="Vijeth">
             </div>
@@ -194,6 +172,36 @@
             <div>&nbsp;</div>
           </a>
         </div>
+
+        <div class="col-md-4 crew-photo-div d-flex justify-content-center ">
+          <a class="person" href="crew-info.html#12" class="crew-photo">
+            <div class="headshot-container">
+                <img class="headshot" class="img-responsive" src="images/mag/shreya.jpeg" alt="Shreya">
+            </div>
+            <div class="name">Shreya</div>
+            <div class="job-title">Editor - English</div>
+            <div class="theme-title">Theme Title/Tagline</div>
+            <div>&nbsp;</div>
+          </a>
+        </div>
+
+
+      </div>
+
+      <div class="row py-1">
+
+      <div class="col-md-4 crew-photo-div d-flex justify-content-center ">
+        <a class="person" href="crew-info.html#13" class="crew-photo">
+          <div class="headshot-container">
+              <img class="headshot" class="img-responsive" src="images/mag/rajath.jpeg" alt="Rajath">
+          </div>
+          <div class="name">Rajath</div>
+          <div class="job-title">Editor - Art</div>
+          <div class="theme-title">Theme Title/Tagline</div>
+          <div>&nbsp;</div>
+        </a>
+      </div>
+
 
         <div class="col-md-4 crew-photo-div d-flex justify-content-center ">
           <a class="person" href="crew-info.html#14" class="crew-photo">
@@ -246,7 +254,7 @@
         </div>
 
         <div class="col-md-4 crew-photo-div d-flex justify-content-center ">
-          <a class="person" href="crew-info.html#17" class="crew-photo">
+          <a class="person" href="crew-info.html#18" class="crew-photo">
             <div class="headshot-container">
                 <img class="headshot" class="img-responsive" src="images/mag/surabhi.jpeg" alt="Surabhi">
             </div>
