--- a/Jayzine/pdf_check.html
+++ b/Jayzine/pdf_check.html
@@ -34,7 +34,7 @@
 	<h1>JAYZINE '20</h1>
 	<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	</div>
-	<iframe src="ಜಾಗರಣೆ ಉತ್ತರಗಳು.PDF#toolbar=0" style="width: 100%;
+	<iframe src="https://www.w3.org/WAI/ER/tests/xhtml/testfiles/resources/pdf/dummy.pdf#toolbar=0" style="width: 100%;
 			height: 500px; ">This browser does not support PDFs.
 	</iframe>
 	<div style="padding: 30px 0; text-align: center;">
